Initial work on supporting graalvm native images